[gd_scene load_steps=21 format=3 uid="uid://ddg1hwbx1w5xl"]

[ext_resource type="Script" path="res://scripts/Character.gd" id="1_k2cq5"]
[ext_resource type="PackedScene" uid="uid://c7ejmxrhcb08p" path="res://scenes/new_revolver_good.tscn" id="2_t7emm"]
[ext_resource type="PackedScene" uid="uid://b5ullklw3cyxk" path="res://scenes/shotgun.tscn" id="3_xhexq"]
[ext_resource type="PackedScene" uid="uid://cdank381erh0u" path="res://scenes/double_shotty.tscn" id="4_pyyou"]
[ext_resource type="Material" uid="uid://dw6webk13k0hj" path="res://materials/psx_filter.tres" id="5_loits"]
[ext_resource type="LabelSettings" uid="uid://c6i5e62bqc3jv" path="res://label thingies/font1.tres" id="6_6cijo"]
[ext_resource type="Script" path="res://scripts/weapon_handler.gd" id="6_a5a7g"]
[ext_resource type="Texture2D" uid="uid://cyn03qprx6lvf" path="res://sprites/crosshairs.png" id="7_xtelh"]
[ext_resource type="AudioStream" uid="uid://sx888bs81l4" path="res://sound/sfx/jump_impact_2.wav" id="8_5ooss"]
[ext_resource type="Material" uid="uid://cveieyb35bc3x" path="res://materials/placeholder.tres" id="9_111fw"]
[ext_resource type="LabelSettings" uid="uid://igg7jl8mx8i2" path="res://label thingies/font_title.tres" id="9_hclnr"]
[ext_resource type="AudioStream" uid="uid://l8hvc2a5jbfk" path="res://sound/sfx/jump_impact_short.wav" id="9_mox8n"]
[ext_resource type="AudioStream" uid="uid://cg33iw1wpt1mb" path="res://sound/sfx/hitstop.ogg" id="11_l448n"]

[sub_resource type="BoxMesh" id="BoxMesh_t1j6g"]
material = ExtResource("5_loits")
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_aq0is"]
size = Vector3(0.5, 0.5, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1812g"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6i6o0"]
radius = 0.49

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v3ad5"]
material = ExtResource("9_111fw")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_66dhv"]
height = 0.275
radius = 2.5

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_lnm2r"]
length = 0.5

[node name="Character" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 3
script = ExtResource("1_k2cq5")
metadata/_edit_horizontal_guides_ = [300.0, -300.0]
metadata/_edit_vertical_guides_ = [568.0, -568.0]

[node name="CameraRoot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.631373, 0)
current = true
fov = 100.0

[node name="plchld_revolver_better" parent="CameraRoot/Camera3D" instance=ExtResource("2_t7emm")]
transform = Transform3D(-0.15, 0, -2.26494e-08, 0, 0.15, 0, 2.26494e-08, 0, -0.15, 0.591, -0.344, -0.401)

[node name="new_shotgun" parent="CameraRoot/Camera3D" instance=ExtResource("3_xhexq")]
transform = Transform3D(0.07, 0, 0, 0, 0.07, 0, 0, 0, 0.07, 0.374086, -0.376776, -0.541138)
visible = false

[node name="double_shotty" parent="CameraRoot/Camera3D" instance=ExtResource("4_pyyou")]
transform = Transform3D(0.07, 0, 0, 0, 0.07, 0, 0, 0, 0.07, 0.374, -0.377, -0.541)
visible = false

[node name="hitscan_01" type="RayCast3D" parent="CameraRoot/Camera3D"]
target_position = Vector3(0, 0, -100)
collide_with_areas = true
debug_shape_custom_color = Color(0.670588, 0, 0, 1)

[node name="crossover_check" type="RayCast3D" parent="CameraRoot/Camera3D/hitscan_01"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -19)
target_position = Vector3(0, 0, -2)
hit_from_inside = true

[node name="hitscan_end" type="Node3D" parent="CameraRoot/Camera3D/hitscan_01"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100)

[node name="psx_filter" type="MeshInstance3D" parent="CameraRoot/Camera3D"]
visible = false
mesh = SubResource("BoxMesh_t1j6g")

[node name="hitscan_06" type="RayCast3D" parent="CameraRoot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
target_position = Vector3(0, -0.5, -100)
collide_with_areas = true
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="hitscan_end" type="Node3D" parent="CameraRoot/Camera3D/hitscan_06"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, -100)

[node name="hitscan_07" type="RayCast3D" parent="CameraRoot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
target_position = Vector3(0, 0.5, -100)
collide_with_areas = true
debug_shape_custom_color = Color(0, 0, 1, 1)

[node name="hitscan_end" type="Node3D" parent="CameraRoot/Camera3D/hitscan_07"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, -100)

[node name="hitscan_08" type="RayCast3D" parent="CameraRoot/Camera3D"]
target_position = Vector3(0, 0, -1.25)
collision_mask = 3
collide_with_areas = true

[node name="melee_area" type="Area3D" parent="CameraRoot/Camera3D"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraRoot/Camera3D/melee_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
shape = SubResource("BoxShape3D_aq0is")

[node name="cam_direction" type="Node3D" parent="CameraRoot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="weapon_handler" type="Node3D" parent="CameraRoot/Camera3D"]
script = ExtResource("6_a5a7g")

[node name="CameraRoot2D" type="Node2D" parent="."]

[node name="ui_container_bottomleft" type="VBoxContainer" parent="CameraRoot2D"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -568.0
offset_top = 250.0
offset_right = -492.0
offset_bottom = 300.0
grow_vertical = 0
alignment = 1

[node name="ConcentrationLabel" type="Label" parent="CameraRoot2D/ui_container_bottomleft"]
layout_mode = 2
text = "CONCENTRATION: "
label_settings = ExtResource("6_6cijo")

[node name="HPLabel" type="Label" parent="CameraRoot2D/ui_container_bottomleft"]
unique_name_in_owner = true
layout_mode = 2
text = "HP:"
label_settings = ExtResource("6_6cijo")

[node name="StaminaLabel" type="Label" parent="CameraRoot2D/ui_container_bottomleft"]
unique_name_in_owner = true
layout_mode = 2
text = "STAMINA:"
label_settings = ExtResource("6_6cijo")

[node name="ui_container_center" type="HBoxContainer" parent="CameraRoot2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="crosshair" type="Sprite2D" parent="CameraRoot2D/ui_container_center"]
position = Vector2(20, 20)
texture = ExtResource("7_xtelh")
hframes = 2
vframes = 3

[node name="Camera2D" type="Camera2D" parent="CameraRoot2D"]

[node name="ui_container_bottomright" type="VBoxContainer" parent="CameraRoot2D"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 512.0
offset_top = 277.0
offset_right = 568.0
offset_bottom = 317.0
grow_horizontal = 0
grow_vertical = 0

[node name="SpeedLabel" type="Label" parent="CameraRoot2D/ui_container_bottomright"]
unique_name_in_owner = true
layout_mode = 2
text = "SPEED: "
label_settings = ExtResource("6_6cijo")

[node name="ui_container_topright" type="VBoxContainer" parent="CameraRoot2D"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 514.0
offset_top = -300.0
offset_right = 568.0
offset_bottom = -260.0
grow_horizontal = 0

[node name="StyleLabel" type="Label" parent="CameraRoot2D/ui_container_topright"]
unique_name_in_owner = true
layout_mode = 2
text = "STYLE: "
label_settings = ExtResource("6_6cijo")

[node name="ComboLabel" type="Label" parent="CameraRoot2D/ui_container_topright"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "COMBO x"
label_settings = ExtResource("6_6cijo")

[node name="BonusesLabel" type="Label" parent="CameraRoot2D/ui_container_topright"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = " "

[node name="ui_container_topleft" type="VBoxContainer" parent="CameraRoot2D"]
offset_left = -568.0
offset_top = -300.0
offset_right = -528.0
offset_bottom = -260.0

[node name="ScoreLabel" type="Label" parent="CameraRoot2D/ui_container_topleft"]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("6_6cijo")

[node name="menu_container" type="VBoxContainer" parent="CameraRoot2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -80.0
offset_right = 20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Button" type="Button" parent="CameraRoot2D/menu_container"]
layout_mode = 2
text = "resume"

[node name="Button2" type="Button" parent="CameraRoot2D/menu_container"]
layout_mode = 2
text = "exit to menu"

[node name="death_screen" type="VBoxContainer" parent="CameraRoot2D"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="death_label" type="Label" parent="CameraRoot2D/death_screen"]
layout_mode = 2
text = "YOU DIED!"
label_settings = ExtResource("9_hclnr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="CameraRoot2D/death_screen"]
layout_mode = 2

[node name="menu_button" type="Button" parent="CameraRoot2D/death_screen"]
layout_mode = 2
text = "exit to main menu"

[node name="pop_up_container" type="VBoxContainer" parent="CameraRoot2D"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 30

[node name="Control" type="Control" parent="CameraRoot2D/pop_up_container"]
layout_mode = 2

[node name="pop_up_text" type="Label" parent="CameraRoot2D/pop_up_container"]
layout_mode = 2
label_settings = ExtResource("6_6cijo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1812g")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.51, 0)
shape = SubResource("SphereShape3D_6i6o0")

[node name="RayCast3D" type="RayCast3D" parent="CollisionShape3D2"]
target_position = Vector3(0, 1.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_v3ad5")

[node name="walk_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_mox8n")
max_polyphony = 10

[node name="landing_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_5ooss")

[node name="hitstop_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_l448n")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.875, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_66dhv")

[node name="slam_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="StairsBelowRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, -0.5, 0)

[node name="StepUpSeparationRay_F" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, -0.575)
shape = SubResource("SeparationRayShape3D_lnm2r")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_F"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.55, 0)

[node name="StepUpSeparationRay_L" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, -0.575)
shape = SubResource("SeparationRayShape3D_lnm2r")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_L"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.55, 0)

[node name="StepUpSeparationRay_R" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, -0.575)
shape = SubResource("SeparationRayShape3D_lnm2r")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_R"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.55, 0)

[connection signal="pressed" from="CameraRoot2D/menu_container/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CameraRoot2D/menu_container/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CameraRoot2D/death_screen/menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
